improved AWT utils